--- a/web.html
+++ b/web.html
@@ -11,8 +11,8 @@
   	<header>
 
 	
-	        <h1>WILD CIRCUS.</h1>
-	        <h2>THE GREATEST SHOW ON EARTH.</h2>
+	        <h1>WILD CIRCUS</h1>
+	        <h2>THE GREATEST SHOW ON EARTH</h2>
 			<h3>WORLD TOUR 2016 </h3>
     		<h4>WELCOME TO EVERYBODY</h4>
 
